2005-07-12 Christian Hammers <ch@debian.org>

	* vtysh_user.c: rename struct user to struct vtysh_user to avoid
	  clashes with sys/user.h on Linux/ARM.

2005-04-07 Hasso Tepper <hasso at quagga.net>

	* Makefile.am: Remove rebuild4 target, it's not used any more by build
	  procedure. Define vtysh_cmd_FILES. Use EXTRA_DIST.
	* extract.pl.in: Ignore "router zebra".

2005-03-28 Hasso Tepper <hasso at quagga.net>

	* extract.pl.in: Use SNMP_INCLUDES to avoid warnings if compiling with
	  snmp support.

2005-03-09 Hasso Tepper <hasso at quagga.net>

	* vtysh_config.c: Move password commands to the AAA_NODE. It
	  quarantees that they will appear after SERVICE_NODE to make sure
	  that encrypted passwords will work ("service password-encryption"
	  command).

2005-01-28 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* vtysh.h: Remove obsolete VTYSH_INDEX_* defines.  Fix many prototypes
	  for functions with no arguments (must specify argument list as void).
	* vtysh.c: Enhance vtysh_client array to include the daemon's name
	  and bitmask and socket path (in addition to the fd).  This allows
	  us to use loop constructs for various operations that need to be
	  applied to all client daemons, and it facilitates better error
	  messages.  Also fix some prototypes with void argument lists.
	  (vclient_close) Issue a warning message indicating which daemon's
	  socket is being closed.
	  (vtysh_execute_func,vtysh_config_from_file) Use a for loop to
	  call vtysh_client_execute.
	  (vtysh_write_terminal,write_config_integrated) Use a for loop to
	  call vtysh_client_config.
	  (vtysh_write_memory) Use a for loop to call vtysh_client_execute.
	  (vtysh_show_daemons) Use a for loop.
	  (vtysh_connect) The struct vtysh_client is now statically initialized,
	  so do not initialize it here.
	  (vtysh_connect_all) Use a for loop to call vtysh_connect.  Set
	  ripd_client pointer for use in vtysh_exit_ripd_only.

2005-01-23 Hasso Tepper <hasso at quagga.net>
