@@ -1,3 +1,7 @@
+2005-08-22 Hugo Santos <hsantos@av.it.pt>
+
+	* vtysh.c: Add support for BGP_IPV6M_NODE
+	
 2005-07-12 Christian Hammers <ch@debian.org>
 
 	* vtysh_user.c: rename struct user to struct vtysh_user to avoid
